# pygitpub

./: Makefile  README.md  README.rst  pyproject.toml  requirements.thawed.txt  requirements.txt  setup.py
.github/workflows/: build.yml
config/: deps.py  project.py  python.py  version.py
doc/: DONE.txt  NOTES.txt  TODO.txt  clone_all.txt  usage.txt
docs/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pygitpub.html  pygitpub.utils.html  search.html  searchindex.js
docs/.doctrees/: index.doctree  modules.doctree  pygitpub.doctree  pygitpub.utils.doctree
docs/_modules/: index.html
docs/_modules/pygitpub/: configs.html  main.html  utils.html
docs/_modules/pygitpub/utils/: importlib.html  misc.html
docs/_modules/pytconf/: param.html
docs/_sources/: index.rst.txt  modules.rst.txt  pygitpub.rst.txt  pygitpub.utils.rst.txt
docs/_static/: documentation_options.js
pygitpub/: __init__.py  configs.py  main.py  static.py  utils.py
pygitpub/utils/: importlib.py  misc.py
scripts/: pygitpub_create.sh
sphinx/: conf.py  modules.rst  pygitpub.rst
sphinx.moved/: pygitpub.utils.rst
src/pygitpub/: configs.py  main.py  static.py
src/pygitpub/utils/: importlib.py  misc.py
