[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pygitpub"
version = "0.0.56"
requires-python = ">=3.12"
authors = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
maintainers = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
description = "Pygitpub will help you work with github"
readme = "README.md"
license = "MIT"
keywords=[
    "github",
    "pygithub",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pytconf",
    "pylogconf",
    "PyGithub",
    "pyapikey",
    "pyyaml",
]

[project.urls]
"Homepage" = "https://github.com/veltzer/pygitpub"
"Bug Tracker" = "https://github.com/veltzer/pygitpub/issues"
"Documentation" = "https://veltzer.github.io/pygitpub"
"Download" = "https://pypi.org/project/pygitpub/"
"Repository" = "https://github.com/veltzer/pygitpub"


[tool.ruff]
line-length = 130

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/pygitpub"]

[tool.hatch.build.targets.sdist]
include = [
    "src/pygitpub/",
    "README.md",
    "LICENSE",
    "pyproject.toml"
]
exclude = [
    ".gitignore",
    ".github/",
    "tests/",
    "docs/",
    "config/",
    "*.md",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.hatch.envs.default]
installer = "uv"
